feat: Add animated fireflies, magic particles, and butterflies, and adjust flower initial position.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,46 @@
         <div class="shooting-star shooting-star--1"></div>
         <div class="shooting-star shooting-star--2"></div>
         <div class="shooting-star shooting-star--3"></div>
+
+        <!-- Fireflies (Atəşböcəkləri) -->
+        <div class="firefly firefly--1"></div>
+        <div class="firefly firefly--2"></div>
+        <div class="firefly firefly--3"></div>
+        <div class="firefly firefly--4"></div>
+        <div class="firefly firefly--5"></div>
+        <div class="firefly firefly--6"></div>
+        <div class="firefly firefly--7"></div>
+        <div class="firefly firefly--8"></div>
     </div>
+
+    <!-- Magic Particles (Sehrli hissəciklər) -->
+    <div class="magic-particles">
+        <div class="particle particle--1"></div>
+        <div class="particle particle--2"></div>
+        <div class="particle particle--3"></div>
+        <div class="particle particle--4"></div>
+        <div class="particle particle--5"></div>
+        <div class="particle particle--6"></div>
+        <div class="particle particle--7"></div>
+        <div class="particle particle--8"></div>
+        <div class="particle particle--9"></div>
+        <div class="particle particle--10"></div>
+    </div>
+    <div class="butterflies">
+        <div class="butterfly butterfly--1">
+            <div class="butterfly-wing butterfly-wing--left"></div>
+            <div class="butterfly-wing butterfly-wing--right"></div>
+        </div>
+        <div class="butterfly butterfly--2">
+            <div class="butterfly-wing butterfly-wing--left"></div>
+            <div class="butterfly-wing butterfly-wing--right"></div>
+        </div>
+        <div class="butterfly butterfly--3">
+            <div class="butterfly-wing butterfly-wing--left"></div>
+            <div class="butterfly-wing butterfly-wing--right"></div>
+        </div>
+    </div>
+
 
     <div class="flowers">
         <div class="flower flower--1">
